# rigstats

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  STANDARDS.md  cargo-check-out.txt  eslint.config.mjs  lefthook.yml  main.js  package-lock.json  package.json  release-please-config.json
.github/workflows/: build.yml  deploy-website.yml  release-please.yml  release.yml  verify.yml
docs/: architecture.md  release.md  setup.md  troubleshooting.md
frontend/: about.html  dialog.css  index.html  panel-base.css  panel-clock.html  panel-cpu.html  panel-disk.html  panel-gpu.html  panel-header.html  panel-motherboard.html  panel-net.html  panel-process.html  panel-ram.html  settings.html  status.html  updater.html
frontend/renderer/: about.js  app.js  clock.js  environment.js  panel-host.js  settings.js  simulator.js  spark.js  spark.test.js  status.js  systemInfo.js  tempColors.js  tempColors.test.js  themes.js  themes.test.js  updater.js  vendorBranding.js  vendorBranding.test.js
frontend/renderer/panels/: cpu.js  disk.js  gpu.js  gpu.test.js  motherboard.js  motherboard.test.js  network.js  process.js  process.test.js  ram.js
src/: index.html  preload.js  settings.html
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: about-window.json  main-window.json  panel-window.json  settings-window.json  status-window.json  updater-window.json
src-tauri/permissions/autogenerated/: broadcast_stats.toml  close_window.toml  collect_diagnostics.toml  get_about_info.toml  get_changelog.toml  get_cpu_info.toml  get_stats.toml  get_system_brand.toml  get_system_name.toml  hide_settings_window.toml  log_frontend_error.toml  open_updater_window.toml  preview_floating_scale.toml  preview_opacity.toml  preview_profile.toml  preview_theme.toml  preview_visible_panels.toml  save_panel_positions.toml  set_gpu_preference.toml  set_main_height.toml  set_settings_pinned.toml  start_window_drag.toml  test_temp_alert.toml  toggle_floating_mode.toml
src-tauri/src/: autostart.rs  commands.rs  debug.rs  diagnostics.rs  hardware.rs  lhm.rs  lhm_process.rs  main.rs  monitor.rs  settings.rs  stats.rs  streamdeck.rs  updater.rs  windows.rs
src/main/: ipc.js  settings.js  stats.js  tray.js  window.js
src/renderer/: app.js  clock.js  environment.js  simulator.js  spark.js  systemInfo.js
src/renderer/panels/: cpu.js  disk.js  gpu.js  network.js  ram.js
website/: CNAME  index.html  robots.txt  script.js  sitemap.xml  style.css
