[package]
name = "rigstats"
version = "1.0.0"
description = "RigStats dashboard"
authors = ["Daniel"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
sysinfo = "0.30"
hostname = "0.4"
zip = "2"
rfd = "0.14"

[target.'cfg(windows)'.dependencies]
wmi = "0.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
