[package]
name = "rigstats"
version = "1.11.0" # x-release-please-version
description = "RIGStats dashboard"
authors = ["Daniel Valfridsson"]
license = "MIT"
repository = "https://github.com/dvalfrid/rigstats"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
sysinfo = "0.30"
hostname = "0.4"
zip = "2"
rfd = "0.14"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2"
elgato-streamdeck = "0.12"
image = "0.25"
font8x8 = "0.2"

[target.'cfg(windows)'.dependencies]
wmi = "0.13"
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Correctness
dbg_macro = "warn"
todo = "warn"
# Readability
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
needless_pass_by_value = "warn"
# Windows-specific: silence false positives for dead_code on cfg-gated items

